2005-07-08  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/gplot.l (Fhold, Fishold): Delete.
	(clear_before_plotting): Delete static variable.
	Delete PKG_ADD line for hold.

2005-07-07  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (pr_plus_format): Delete "static" from template decl.

	* oct-stream.cc (octave_scan): Delete explicit instantiation of
	octave_scan<double> since a specialization is provided.

	* DLD-FUNCTIONS/matrix_type.cc (Fmatrix_type): Include
	<algorithm>, for std::transform decl.  Use std qualifier for
	transform and tolower.

2005-07-05  Antoine Moreau  <antoine.moreau@univ-bpclermont.fr>

	* DLD-FUNCTIONS/betainc.cc (Fbetainc): Fix doc string to match
	function definition..

2005-07-05  Mats Jansson  <mats.e.jansson@home.se>

         * file-io.cc (Fmkstemp): Check if second argument is true
         before marking file for deletion.

2005-07-05  John W. Eaton  <jwe@octave.org>

	* ov-str-mat.cc (octave_char_matrix_str::do_index_op_internal):
	Rename from char_matrix_str::do_index_op.  New arg, type.
	ov-str-mat.h (octave_char_matrix_str::do_index_op): Define using
	do_index_op_internal.
	(octave_char_matrix_sq_str::do_index_op): New function.

2005-07-01  John W. Eaton  <jwe@octave.org>

	* parse.y (end_error): Also handle end_try_catch case.

2005-06-17  John W. Eaton  <jwe@octave.org>

	* help.cc (help_from_list, help_from_symbol_table, 
	help_from_file): New arg, symbol_found.
	(builtin_help): Use symbol_found arg to determine whether help
	text is empty or symbol is not available.

	* symtab.cc (symbol_record::print_info): Print more info.

	* DLD-FUNCTIONS/dispatch.cc (Fdispatch_help): Delete.
	(dispatch_record): Don't prepend "<>" to help text.
	(Fdispatch): Don't setup dispatched help.

	* help.cc (extract_help_from_dispatch): New function.
	(help_from_symbol_table): Use it.
	* defun.cc (print_usage): Use it.

	* toplev.cc (octave_config_info): Include localapifcnfiledir and
	localapioctfiledir in the list.
